well, list, text, and css

--- a/index.html
+++ b/index.html
@@ -10,24 +10,43 @@
       <div class="well">
         <h3>Welcome to <a href="#">Wikipedia</a></h3>
         <ul>
-          <li><a href="#">Art</a></li>
-          <li><a href="#">Biography</a></li>
-          <li><a href="#">Geography</a></li>
-          <li><a href="#">History</a></li>
-          <li><a href="#">Mathematics</a></li>
-          <li><a href="#">Science</a></li>
-          <li><a href="#">Society</a></li>
-          <li><a href="#">Technology</a></li>
-          <li><a href="#">All Portals</a></li>
+          <li><a href="kkk">Art</a></li>
+          <li><a href="kkk">Biography</a></li>
+          <li><a href="kkk">Geography</a></li>
+          <li><a href="kkk">History</a></li>
+          <li><a href="kkk">Mathematics</a></li>
+          <li><a href="kkk">Science</a></li>
+          <li><a href="kkk">Society</a></li>
+          <li><a href="kkk">Technology</a></li>
+          <li><a href="kkk">All Portals</a></li>
         </ul>
       </div>
-      <div>
-        <div class= "panel panel-success">
-          <div class= "panel-heading">
-            <h2 class= "panel-title">From today's featured article.</h2>
+    <div class="row">
+      <div class="col-md-6">
+      <div class= "well bg">
+        <h4 class= "bg-success">From today's featured article.</h4>
+          <div>
+            <p>
+              Bacon ipsum dolor amet biltong ball tip tongue filet mignon, sirloin swine fatback turducken landjaeger doner shankle. Capicola frankfurter corned beef t-bone porchetta sirloin prosciutto salami. Meatball pancetta kevin, turkey corned beef alcatra cow venison tail pork belly. Sausage leberkas pork bacon sirloin. Filet mignon pastrami picanha pig flank. Andouille salami capicola burgdoggen, landjaeger strip steak ribeye bacon meatloaf biltong beef ribs chicken drumstick.Biltong pork jowl t-bone doner pastrami. Sausage beef corned beef brisket tenderloin strip steak meatball tail shoulder swine ham hock. Leberkas hamburger shoulder sirloin burgdoggen beef. Chicken bresaola doner, chuck ham rump t-bone turkey. Landjaeger t-bone pork chop, tri-tip salami cow sausage andouille. Andouille landjaeger jowl, t-bone turkey spare ribs biltong salami. Brisket corned beef beef ribs fatback salami.
+            </p>
+            <h4 class= "bg-success">Did you know...</h4>
+            <p>
+              Bacon ipsum dolor amet biltong ball tip tongue filet mignon, sirloin swine fatback turducken landjaeger doner shankle. Capicola frankfurter corned beef t-bone porchetta sirloin prosciutto salami. Meatball pancetta kevin, turkey corned beef alcatra cow venison tail pork belly. Sausage leberkas pork bacon sirloin. Filet mignon pastrami picanha pig flank. Andouille salami capicola burgdoggen, landjaeger strip steak ribeye bacon meatloaf biltong beef ribs chicken drumstick.Biltong pork jowl t-bone doner pastrami. Sausage beef corned beef brisket tenderloin strip steak meatball tail shoulder swine ham hock. Leberkas hamburger shoulder sirloin burgdoggen beef. Chicken bresaola doner, chuck ham rump t-bone turkey. Landjaeger t-bone pork chop, tri-tip salami cow sausage andouille. Andouille landjaeger jowl, t-bone turkey spare ribs biltong salami. Brisket corned beef beef ribs fatback salami.
+            </p>
           </div>
-          <div class="panel-body">
-            <p></p>
+        </div>
+      </div>
+      <div class="col-md-6">
+      <div class= "well">
+        <h4 class= "bg-info">From today's featured article.</h4>
+          <div>
+            <p>
+              Bacon ipsum dolor amet biltong ball tip tongue filet mignon, sirloin swine fatback turducken landjaeger doner shankle. Capicola frankfurter corned beef t-bone porchetta sirloin prosciutto salami. Meatball pancetta kevin, turkey corned beef alcatra cow venison tail pork belly. Sausage leberkas pork bacon sirloin. Filet mignon pastrami picanha pig flank. Andouille salami capicola burgdoggen, landjaeger strip steak ribeye bacon meatloaf biltong beef ribs chicken drumstick.Biltong pork jowl t-bone doner pastrami. Sausage beef corned beef brisket tenderloin strip steak meatball tail shoulder swine ham hock. Leberkas hamburger shoulder sirloin burgdoggen beef.
+            </p>
+            <h4 class="bg-info">On this day...</h4>
+            <p>
+              Bacon ipsum dolor amet biltong ball tip tongue filet mignon, sirloin swine fatback turducken landjaeger doner shankle. Capicola frankfurter corned beef t-bone porchetta sirloin prosciutto salami. Meatball pancetta kevin, turkey corned beef alcatra cow venison tail pork belly. Sausage leberkas pork bacon sirloin. Filet mignon pastrami picanha pig flank. Andouille salami capicola burgdoggen, landjaeger strip steak ribeye bacon meatloaf biltong beef ribs chicken drumstick.Biltong pork jowl t-bone doner pastrami. Sausage beef corned beef brisket tenderloin strip steak meatball tail shoulder swine ham hock. Leberkas hamburger shoulder sirloin burgdoggen beef. Chicken bresaola doner, chuck ham rump t-bone turkey. Landjaeger t-bone pork chop, tri-tip salami cow sausage andouille. Andouille landjaeger jowl, t-bone turkey spare ribs biltong salami. Brisket corned beef beef ribs fatback salami.
+            </p>
           </div>
         </div>
       </div>
